fix: update GitHub links in Footer and Welcome-Text components

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -33,11 +33,11 @@
     </li>
     <li class="md:ml-auto">
       <a
-        href="https://github.com/franklinserif"
+        href="https://github.com/franklinsrr"
         class="w-[50px] md:w-full h-[39px] flex justify-center items-center md:px-5 border-l border-l-lines hover:bg-primary-hover"
         target="_blank"
       >
-        <span class="mr-2 hidden md:block"> @franklinserif </span>
+        <span class="mr-2 hidden md:block"> @franklinsrr </span>
         <img class="w-[20px] h-[20px]" src="/github-icon.svg" alt="Github" />
       </a>
     </li>
