fix: update GitHub link in Welcome-Text component

--- a/src/components/Welcome-Text.astro
+++ b/src/components/Welcome-Text.astro
@@ -23,13 +23,13 @@
 
     <a
       class="text-labels text-snippets"
-      href="https://github.com/franklinsrr"
+      href="https://github.com/jefillysh"
       target="_blank"
     >
       <span class="text-secondary-blue"> const </span>
       <span class="text-accent-green"> github </span>
       <span class="text-white"> = </span>
-      <span class="text-accent-salmon"> "https://github.com/franklinsrr"</span>
+      <span class="text-accent-salmon"> "https://github.com/jefillysh"</span>
     </a>
   </div>
 </div>
